# Mario

./: .gitignore  CMakeLists.txt
assets/: mario
assets/shaders/: color.glfs  color.glvs  sprite.glfs  sprite.glvs  text.glfs  text.glvs  tilelayer.glfs  tilelayer.glvs  tileset.glfs  tileset.glvs
assets/texturepacker/: sprites.tps
assets/tiled/: 1-1.tmx
assets/tilesets/: platform.tsx  sprite.tsx
src/: CMakeLists.txt  action.hpp  buffered_world_state.cpp  buffered_world_state.hpp  camera.hpp  command_state.cpp  command_state.hpp  destroy_entity_entity.cpp  destroy_entity_game.cpp  destroy_entity_world.cpp  draw_world_state.cpp  draw_world_state.hpp  entity_state.cpp  entity_state.hpp  flush_sound_queue.cpp  game_action.hpp  game_state.hpp  game_values.cpp  game_values.hpp  id.hpp  init.cpp  input_entity.cpp  input_game.cpp  input_world.cpp  level_object_state.cpp  level_object_state.hpp  level_state.cpp  level_state.hpp  load_entity.cpp  load_game.cpp  load_level.cpp  load_level_object.cpp  load_sound.cpp  load_tileset.cpp  load_world.cpp  main.cpp  make_entity_entity.cpp  make_entity_game.cpp  make_entity_world.cpp  map.cpp  (+29 more)
